# zed_da3_compare

./: .gitignore  CMakeLists.txt  MAY-COMPARATIONS-STATUS.md  README.md  commands.md  package.xml
captures/scene_00_tests/: scene_annotations.csv
captures/scene_00_tests/analysis/: analysis_report.md  roi_metrics_existing_long.csv  roi_metrics_existing_wide.csv  roi_metrics_long.csv  roi_metrics_wide.csv  summary_by_method.csv  winner_counts.csv  zed_reference_roi_metrics.csv  zed_reference_sample_metrics.csv
captures/scene_00_tests/sample_000003/: annotations.csv  da3_mono_depth.npy  metadata.json  zed_depth.npy
captures/scene_01_multiple_captures_cirtesuOffice/analysis_notebook/: zed_reference_sample_metrics_notebook.csv
captures/scene_01_multiple_captures_cirtesuOffice/sample_000001/: annotations.csv  metadata.json  zed_depth.npy
captures/scene_01_multiple_captures_cirtesuOffice/sample_000002/: metadata.json  zed_depth.npy
captures/scene_01_multiple_captures_cirtesuOffice/sample_000003/: da3_mono_depth.npy  da3_multiview_depth.npy  metadata.json  zed_depth.npy
captures/scene_01_multiple_captures_cirtesuOffice/sample_000004/: da3_mono_depth.npy  metadata.json  zed_depth.npy
captures/scene_01_multiple_captures_cirtesuOffice/sample_000005/: da3_mono_depth.npy  da3_multiview_depth.npy  metadata.json  zed_depth.npy
captures/scene_01_multiple_captures_cirtesuOffice/sample_000006/: da3_mono_depth.npy  da3_multiview_depth.npy  metadata.json  zed_depth.npy
captures/scene_01_multiple_captures_cirtesuOffice/sample_000007/: da3_mono_depth.npy  da3_multiview_depth.npy  metadata.json  zed_depth.npy
captures/scene_01_multiple_captures_cirtesuOffice/sample_000008/: da3_mono_depth.npy  da3_multiview_depth.npy  metadata.json  zed_depth.npy
zed_da3_compare/: analyze_gt_scene.py  da3_common.py  da3_depth_multicam_node.py  da3_depth_node.py  da3_offline_bag_eval.py  da3_stereo_depth_node.py  depth_metrics.py  gt_annotation_tool.py  interactive_depth_viewer.py  ros_image_utils.py  zed_sync_sampler_node.py
